--- a/V101/Diskussion.tex
+++ b/V101/Diskussion.tex
@@ -1,11 +1,15 @@
 \section{Diskussion}
 Zwischen dem theoretisch und experimentell bestimmten Trägheitsmoment sind die Werte weit auseinander.
+Da bei allen Messungen, bis auf eine, negative Trägheitsmomente errechnet wurden lohnt
+es sich nicht Abweichungen zu berechnen. Für den Zylinder ist die Abweichung $ 70,4\%$.
+
+
 Das kann daran liegen, dass die Winkelrichtsgröße D zu Beginn fehlerhaft bestimmt worden ist
 und somit sich der Fehler fortsetzt. Außerdem könnte auch das Trägheismoment der Drillachse
 zu groß bestimmt worden sein und da man zur Bestimmung der Trägheitsmomente das Trägheitsmoment
 der Drillachse abziehen muss kann dies zu den negativen Werten geführt haben.
 Bei der Bestimmung des Trägheitsmoments der Drillachse wurde die Metallstange
-als Masselos angenommen, was auch eine Fehlerquelle des Trägheitsmomentes ist.
+als masselos angenommen, was auch eine Fehlerquelle des Trägheitsmomentes ist.
 Das Messen der Schwingungsdauer der Objekte war zum Teil sehr schwierig und die
 Messuhren haben nicht genau dann ausgelößt, wenn sie betätigt wurden. Dadurch ist
 der Fehler der Trägheitsmomente groß geworden und das könnte auch dazu beigetragen
@@ -14,5 +18,5 @@ Es gibt keine negativen Trägheitsmomente, da sie physikalisch nicht sinnvoll si
 bzw. nicht möglich sind.
 Die Näherung der Körperteile der Puppe als Zylinder ist ungenau, wodurch der
 theoretisch bestimmte Wert nicht sehr genau sein kann.
-Die Messungen könnten Verbessert werden, durch geeichte Federwaagen mit denen
+Die Messungen könnten verbessert werden, durch geeichte Federwaagen mit denen
 genau senkrecht gemessen werden kann.
