--- a/V101/Durchfuehrung.tex
+++ b/V101/Durchfuehrung.tex
@@ -1,14 +1,23 @@
  \section{Durchführung}
-Zur Bestimmung der Apperaturkonstanten $D$ und das Eigenträgheitsmoment $I_\text{D}$ der Drillachse wird eine Federwaage
-eingehakt und um ein Winkel $\text{\phi}$ ausgelenkt. Es ist zu beachten, dass die Federwaage senkrecht zum Radius
-gehalten wird, da sich das Kreuzprodukt vom Drehmoment aufhebt.
-Mit der Formel aus (4) kann nun die Winkelrichtgröße berechnet werden.
-Zur Bestimmung des Eigenträgheismoments wird ein masselosen Metallstab, an denen zwei Gewicht senkrecht zur Drehachse
-befindet, angesteckt.
-Das Trägheismoment verschiedener Objekte wird mithilfe der Formel (2) bestimmt.
-Für eine Modelpuppe wird ebenfalls das Trägheitsmoment mithilfe der Formel (1) als auch (2) errechnet. Zur Vereinfachung wird
-die Puppe aus verschiedenen Zylindern zusammengebaut (siehe Abbildung 3).
+Zunächst müssen die Apparatekonstanten, die Winkelrichtgröße $D$ und das Trägheitsmoment
+der Drillachse $I_D$, bestimmt werden. Für die Winkelrichtgröße wird auf der Apparatur
+eine nahezu Masselose Stange angebracht und die Kraft bei verschiedenen Auslenkungen
+mithilfe einer Federwaage gemessen. Dabei ist wichtig, dass die Federwaage senkrecht gehalten wird.
+Für das Trägheitsmoment der Drillachse werden an der Stange nun zwei identische Massen mit
+gleichen Abständen zur Drehachse angebracht. Nun wird die Schwingungsdauer des Systems
+bei verschiedenen Abständen der Massen zur Drehachse gemessen.
+Die bestimmten Apparatekonstanten müssen bei den Rechnungen berücksichtigt weden.
+
+Daraufhin können nun die Trägheitsmomente verschiedener Körper über die Schwingungsdauer
+bestimmt werden. In diesem Fall einer Kugel, eines Zylinders und einer Puppe in
+zwei verschiedenen Stellungen. Dafür werden die verschiedenen geometrischen Körper
+auf der Apparatur angebracht, mit dem Schwerpunkt auf der Drehachse. Nun werden die Körper
+aus ihrer Ausgangsposition ausgelenkt und die Schwingungsdauer wird gemessen.
+
+Die Stellungen der Puppe sind in Abbildung 3 schematisch dargestellt. In unserem Fall
+sind bei der linken Position auf der Abbildung die Arme nach oben gestreckt und nicht nach unten.
+
 \begin{figure}
   \includegraphics[width=\textwidth]{Bild3.jpg}
-  \caption{Vereinfachte Darstellung der Modelpuppe[1]}
+  \caption{Vereinfachte Darstellung der Modelpuppe [1].}
 \end{figure}
