--- a/V101/Theorie.tex
+++ b/V101/Theorie.tex
@@ -2,13 +2,14 @@
 Das Trägheitsmoment von verschiedenen Körpern soll bestimmt werden und der Satz von Steiner verifiziert werden.
 \section{Theorie}
 Das Drehmoment $M$, das Trägheitsmoment $I$ als auch die Winkelbeschleunigung $\dot{\omega}$ charakterisieren die Rotationsbewegung.
-Für eine punktförmige Masse kann das Trägheitsmoment mit $I = m*r^2$ berechnen. Dabei ist m die Masse und r der Abstand zur Drehachse.
-Für ein ausgedehnten Körper um eine feste Achse kann das Gesamtträgheitsmoment als:
+Für eine punktförmige Masse kann das Trägheitsmoment mit $I = m\cdot r^2$ berechnen. Dabei ist m die Masse und r der Abstand zur Drehachse.
+Für ein ausgedehnten Körper um eine feste Achse kann das Gesamtträgheitsmoment dargestellt werden als:
+
 \begin{equation}
   I=\sum \limits_{i}^{} r_\text{i}^2 \cdot m_\text{i}
 \end{equation}
-dargestellt werden.
-Das Drehmoment $M$ ist von der Lage der Drehachse abhängig.
+
+Das Trägheitsmoment $I$ ist von der Lage der Drehachse abhängig.
 Für geometrische Objekte, wie ein Kugel, Stab, Zylinder, lässt sich das Trägheitsmoment
 leicht bestimmen.
 In Abbildung 1 sind verschiedene Objekte mit deren Trägheitsmoment dargestellt.
@@ -18,14 +19,14 @@ In Abbildung 1 sind verschiedene Objekte mit deren Trägheitsmoment dargestellt.
 \caption{Objekte mit deren Trägheitsmoment[1]}
 \label{fig:Abb1}
 \end{figure}
-Ist die Drehachse nicht durch den Schwerpunkt eines Körpers sondern parallel mit einem Abstand a
-zur gehenden Achse verschoben, so lässt sich das Trägheitsmoment mithilfe von Satz des Steiners
+Geht die Drehachse nicht durch den Schwerpunkt eines Körpers, sondern parallel um einen Abstand a
+zur drehenden Achse verschoben, so lässt sich das Trägheitsmoment mithilfe des Satz von Steiner
 \begin{equation}
-  I = I_\text{0} + m*a^2
+  I = I_\text{0} + m\cdot a^2
 \end{equation}
 erechnen. Dabei ist $I_\text{0}$ das Trägheitsmoment der Drehachse durch den Schwerpunkt des Körpers.
-Greift eine Kraft mit einem Abstand r von der Achse auf ein drehenden Körper, so wirkt ein Drehmoment $\vec{M} = \vec{F} \times \vec{r}$.
-In einem Schwingungssystem wirkt auf ein Körper durch die Drehung um ein Winkel $\phi$ aus seiner Ruhelage ein rücktreibenes Drehmoment
+Greift eine Kraft in einem Abstand r von der Achse auf ein drehenden Körper, so wirkt ein Drehmoment $\vec{M} = \vec{F} \times \vec{r}$.
+In einem Schwingungssystem wirkt auf einen Körper durch die Drehung um ein Winkel $\phi$ aus seiner Ruhelage ein rücktreibenes Drehmoment
 durch eine Feder entgegen. Die harmonische Schwingung lässt sich mit der Schwingungsdauer
 \begin{equation}
   T = 2\pi \sqrt{\frac{I}{D}}
