--- a/V101/lit.bib
+++ b/V101/lit.bib
@@ -1,5 +1,7 @@
 @manual{1,
   author = {TU Dortmund},
   title = {Anleitung zum Versuch 101: Das Trägheitsmoment},
-  year = 2017
+  year = 2017,
+  url = "http://129.217.224.2/HOMEPAGE/MEDPHYS/BACHELOR/AP/SKRIPT/TraegheitMP.pdf",
+  date = "2017-11-23"
 }
