--- a/V101/Durchfuehrung.tex
+++ b/V101/Durchfuehrung.tex
@@ -1,4 +1,4 @@
- \section{Durchführung}
+\section{Durchführung}
 Zunächst müssen die Apparatekonstanten, die Winkelrichtgröße $D$ und das Trägheitsmoment
 der Drillachse $I_D$, bestimmt werden. Für die Winkelrichtgröße wird auf der Apparatur
 eine nahezu Masselose Stange angebracht und die Kraft bei verschiedenen Auslenkungen
@@ -14,10 +14,11 @@ zwei verschiedenen Stellungen. Dafür werden die verschiedenen geometrischen Kö
 auf der Apparatur angebracht, mit dem Schwerpunkt auf der Drehachse. Nun werden die Körper
 aus ihrer Ausgangsposition ausgelenkt und die Schwingungsdauer wird gemessen.
 
-Die Stellungen der Puppe sind in Abbildung 3 schematisch dargestellt. In unserem Fall
+Die Stellungen der Puppe sind in Abbildung (\ref{fig:Abb3}) schematisch dargestellt. In unserem Fall
 sind bei der linken Position auf der Abbildung die Arme nach oben gestreckt und nicht nach unten.
 
 \begin{figure}
   \includegraphics[width=\textwidth]{Bild3.jpg}
   \caption{Vereinfachte Darstellung der Modelpuppe [1].}
+  \label{fig:Abb3}
 \end{figure}
